--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -6,14 +6,10 @@
 
 {% block content %}
 <form class="form-signin" method="POST" enctype="multipart/form-data">
-  <!--{{ form.csrf_token }}
-  {{ form.filename(class="form-control") }}
-  <input type="submit" class="btn btn-primary" value="Upload">
-  -->
 	<h2 class="form-signin-heading">Please sign in</h2>
   <div class="form-group has-feedback">
     <input type="text" class="form-control" value="" placeholder="Enter your name" id="login-name" />
-    <span class="glyphicon glyphicon-lock form-control-feedback" for="login-name"></span>
+    <span class="glyphicon glyphicon-user form-control-feedback" for="login-name"></span>
   </div>
 
   <div class="form-group has-feedback">
@@ -23,6 +19,6 @@
 
   <a class="btn btn-primary btn-large btn-block" href="#">Login</a>
   <a class="login-link" href="#">Lost your password?</a>
-	<a class="" href="url_for('signup')}}">Sign up</a>
+  <a class="" href="{{url_for('signup')}}">Sign up</a>
 </form>
 {% endblock content %}
