--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,12 +29,15 @@
 
     {% endblock content %}
 
+
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
     <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    {% block script %}
 
+    {% endblock script %}
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
     var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
