增加注册，登陆模块 解析模块为首页

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,6 +14,7 @@
 
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/site.css')}}">
     {% block css %}
     {% endblock css %}
 
@@ -24,6 +25,10 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+
+      {% block headercontainer %}
+
+      {% endblock headercontainer %}
 
     {% block content %}
 
