--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,28 +1,84 @@
 {% extends 'base.html' %}
 
+{% block title %}
+英文阅读单词解析
+{% endblock title %}
+
 {% block css %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/signin.css') }}">  
+
 {% endblock css %}
 
+{% block headercontainer %}
+<header class="site-header jumbotron">
+  {% if current_user.is_authenticated %}
+  <div class="site-nav">
+    <a href="#">{{ current_user.nickname }}</a>|
+    <a href="{{url_for('signout')}}">Sign Out</a>
+  </div>
+  {% endif %}
+  <div class="container">
+    <form action="{{url_for('words')}}" method="POST" enctype="multipart/form-data">
+      {{ form.csrf_token }}
+      {{ form.filename(title="select upload file", class="btn btn-default") }}
+      <button class="btn btn-default">submit</button>
+    </form>
+  </div>
+  </header>
+{% endblock headercontainer %}
+
 {% block content %}
-<form class="form-signin" method="POST" enctype="multipart/form-data">
-  <!--{{ form.csrf_token }}
-  {{ form.filename(class="form-control") }}
-  <input type="submit" class="btn btn-primary" value="Upload">
-  -->
-	<h2 class="form-signin-heading">Please sign in</h2>
-  <div class="form-group has-feedback">
-    <input type="text" class="form-control" value="" placeholder="Enter your name" id="login-name" />
-    <span class="glyphicon glyphicon-lock form-control-feedback" for="login-name"></span>
+<main class="content">
+  {% if isAnalyze == True %}
+  <div style="width:500px;font-family: Caecilia;">
+    <ul class="nav nav-tabs" role="tablist">
+      <li class="active" role="presentation"><a href="#text" aria-controls="text" role="tab" data-toggle="tab">Text</a></li>
+      <li role="presentation"><a href="#dictionary" aria-controls="dictionary" role="tab" data-toggle="tab">Dictionary</a></li>
+      <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane fad in active" id="text">
+        {{ text }}
+      </div>
+      <div id="profile" class="tab-pane fade">
+        profile
+      </div>
+      <div class="tab-pane fade" id="dictionary">
+        <table class="table">
+          <tr>
+            <td>序号</td>
+            <td>单词</td>
+            <td>次数</td>
+            <td>频度</td>
+            <td>发音</td>
+            <td>释义</td>
+          </tr>
+          {% for word in fdist['words'] %}
+          {% if word[1]['basic'] != None %}
+          <tr>
+            <td>{{ word[1]['index'] }}</td>
+            <td>{{ word[1]['word'] }}</td>
+            <td>{{ word[1]['count'] }}</td>
+            <td>{{ word[1]['freq'] }}</td>
+            <td>[uk]{{ word[1]['basic']['basic']['uk-phonetic']}}<br>[us]{{ word[1]['basic']['basic']['us-phonetic']}}</td>
+            <td>
+              {% for exp in  word[1]['basic']['basic']['explains'] %}
+              {{ exp }}<br>
+              {% endfor %}
+            </td>
+          </tr>
+          {% endif %}
+          {% endfor %}
+        </table>
+      </div>
+    </div>
   </div>
-
-  <div class="form-group has-feedback">
-    <input type="password" class="form-control" value="" placeholder="Password" id="login-pass" />
-    <span class="glyphicon glyphicon-lock form-control-feedback" aria-hidden="true"></span>
-  </div>
-
-  <a class="btn btn-primary btn-large btn-block" href="#">Login</a>
-  <a class="login-link" href="#">Lost your password?</a>
-	<a class="" href="url_for('signup')}}">Sign up</a>
-</form>
+  {% endif %}
+</main>
 {% endblock content %}
+
+{% block script %}
+<script src="{{url_for('static', filename='js/bootstrap.file-input.js')}}"></script>
+<script type="text/javascript">
+  $('input[type=file]').bootstrapFileInput();
+</script>
+{% endblock script %}
