--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -5,19 +5,33 @@
 {% endblock css %}
 
 {% block content %}
-<form class="form-signin" method="POST" enctype="multipart/form-data">
+<form action="" class="form-signin" method="POST" enctype="multipart/form-data">
+  {{ form.csrf_token }}
 	<h2 class="form-signin-heading">Please sign in</h2>
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for msg in messages %}
+        <span style="color:red;">{{msg}}</span>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
   <div class="form-group has-feedback">
-    <input type="text" class="form-control" value="" placeholder="Enter your name" id="login-name" />
-    <span class="glyphicon glyphicon-user form-control-feedback" for="login-name"></span>
+    {{ form.email(class="form-control", placeholder="Enter your Email", id="signin-name") }}
+    <span class="glyphicon glyphicon-user form-control-feedback" for="signin-name"></span>
+    {% for error in form.email.errors %}
+      <span style="color: red;"> {{ error }}</span>
+    {% endfor %}
   </div>
 
   <div class="form-group has-feedback">
-    <input type="password" class="form-control" value="" placeholder="Password" id="login-pass" />
+    {{ form.password(class="form-control", placeholder="Password", id="signin-pass") }}
     <span class="glyphicon glyphicon-lock form-control-feedback" aria-hidden="true"></span>
+    {% for error in form.password.errors %}
+      <span style="color: red;"> {{ error }}</span>
+    {% endfor %}
   </div>
 
-  <a class="btn btn-primary btn-large btn-block" href="#">Login</a>
+  <button class="btn btn-primary btn-large btn-block" id="signin">Sign in</button>
   <a class="login-link" href="#">Lost your password?</a>
   <a class="" href="{{url_for('signup')}}">Sign up</a>
 </form>
